[package]
name = "mdbrowser"
version = "0.1.0"
authors = ["alen <to_alen@sina.com>"]
build = "build.rs"

[build-dependencies]
gcc = "*"
cmake = "*"

[dependencies]
html5ever = "*"
scraper = "*"
regex = "*"
time = "*"
serde_json = "*"
base64 ="*"
webkit2gtk = "0.1.0"
#webkit2gtk = { git = "https://github.com/alenstar/webkit2gtk-rs.git" }
